--- a/vidhan.html
+++ b/vidhan.html
@@ -21,7 +21,15 @@
         <p>Trex runner game</p>
 
         <a href="https://studio.code.org/projects/gamelab/64P5OWb8wouwzoZXdTzc_cG3zvNcrfZm0gWpQFEFKxg"><img src="AlienGame.png"/></a>
-        <p>Hungry alien game</p>
+        <p>Alien runner game</p>
+
+        <a herf=https://studio.code.org/projects/gamelab/GfUgDwyJ4IwA5S4yaA5J9dwXvS8930d9PJdCtbc1ccw><img src="pongFootballGame.png"></a>
+        <p>pong football game</p>
+        
+        <a href=" https://studio.code.org/projects/gamelab/arhT2_BvAcA8DixtfM2ee9ORSNwBjEoe3YdFurtg3AY"><img src="footballGame.png"></a>
+        <p>boy v/s computer football match</p>
+        
+
 
     </body>
 
